c3/stringize_pv
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:999:14: error: expected expression
*( ( _OWORD *)str + 15) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:999:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 15) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1000:14: error: expected expression
*( ( _OWORD *)str + 14) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1000:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 14) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1001:14: error: expected expression
*( ( _OWORD *)str + 13) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1001:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 13) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1002:14: error: expected expression
*( ( _OWORD *)str + 12) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1002:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 12) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1003:14: error: expected expression
*( ( _OWORD *)str + 11) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1003:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 11) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1004:14: error: expected expression
*( ( _OWORD *)str + 10) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1004:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 10) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1005:14: error: expected expression
*( ( _OWORD *)str + 9) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1005:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 9) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1006:14: error: expected expression
*( ( _OWORD *)str + 8) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1006:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 8) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1007:14: error: expected expression
*( ( _OWORD *)str + 7) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1007:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 7) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1008:14: error: expected expression
*( ( _OWORD *)str + 6) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1008:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 6) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1009:14: error: expected expression
*( ( _OWORD *)str + 5) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1009:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 5) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1010:14: error: expected expression
*( ( _OWORD *)str + 4) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1010:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 4) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1011:14: error: expected expression
*( ( _OWORD *)str + 3) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1011:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 3) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1012:14: error: expected expression
*( ( _OWORD *)str + 2) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1012:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 2) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1013:14: error: expected expression
*( ( _OWORD *)str + 1) = 0LL; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1013:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)str + 1) = 0LL; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1014:12: error: expected expression
*( _OWORD *)str = 0LL; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1014:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)str = 0LL; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:1021:14: error: passing 'char [296]' to parameter of incompatible type 'move_s'
comp_to_san( src, *v2); 
             ^~~
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/utils.c:116:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[])
                         ^
33 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/stringize_pv/src/obj/utils.o] Error 1
